<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RolActivity">


    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="625dp"
        android:orientation="vertical"
        android:paddingTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtIdPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_id"
        />

        <EditText
            android:id="@+id/edtIdPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtPaisIso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_iso" />


        <EditText
            android:id="@+id/edtPaisIso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtPaisNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_nombre" />

        <EditText
            android:id="@+id/edtPaisNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnPaisSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#32CD32"
            android:text="@string/btn_guardar"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnPaisDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:layout_marginTop="10dp"
            android:text="@string/btn_elimina"
            android:textColor="#ffffff" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>